--- a/chrome/chrapp/index.html
+++ b/chrome/chrapp/index.html
@@ -40,19 +40,28 @@
 			</div>
 			-->
 			<div class="todaysEvents">
-			<figure>
-				<img src="images/drawable-hdpi/main_image_2.png">
-				<figcaption>Todays Events</figcaption>
-				</figure>
+			  <figure>
+          <img src="images/drawable-hdpi/main_image_2.png">
+  				<figcaption>Todays Events</figcaption>
+  			</figure>
 			</div>
 			<div class="request">
-				<img src="images/drawable-hdpi/main_image_3.png">
-			</div>
+        <figure>
+				  <img src="images/drawable-hdpi/main_image_3.png">
+          <figcaption>Request</figcaption>
+        </figure>
+      </div>
 			<div class="entertainment">
-				<img src="images/drawable-hdpi/main_image_4.png">
+        <figure>
+				  <img src="images/drawable-hdpi/main_image_4.png">
+          <figcaption>Entertainment</figcaption>
+        </figure>
 			</div>
 			<div class="excursions">
-				<img src="images/drawable-hdpi/main_image_5.png">
+        <figure>
+				  <img src="images/drawable-hdpi/main_image_5.png">
+          <figcaption>Excursions</figcaption>
+        </figure>
 			</div>
 		</div>
 
